fixed layout issues and volume graph bug

--- a/Projects/VolRevAid/Styles/whiteBoardStyle.css
+++ b/Projects/VolRevAid/Styles/whiteBoardStyle.css
@@ -11,6 +11,8 @@ body{
     background-color: beige;
     height:100%;
     padding:0%;
+    border-style:none;
+    margin:0%;
 }
 
 
@@ -76,7 +78,8 @@ input{
 }
 
 #graph3D{
-    margin: 10px;
+    /* margin: 10px; */
+    padding:10px;
 }
 
 
